# nulldistrict

./: .env.example  .gitignore  .release_script.js  .release_script.py  CHANGELOG.md  README.md  docker-compose.yml  eslint.config.js  package-lock.json  package.json  release-steps.js
.github/workflows/: release.yml  server-check.yml
apps/admin/: package.json
apps/admin/src/: index.ts
apps/desktop/: .env.production  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/api/: client.ts
apps/desktop/src/auth/: AuthContext.tsx
apps/desktop/src/components/: Panel.tsx
apps/desktop/src/game/: EventBus.ts  GameContext.ts  GameView.tsx  createGame.ts
apps/server/: package.json
apps/server/prisma/: schema.prisma  seed.ts
apps/server/src/: app.ts  index.ts
assets/audio/: README.md
assets/backgrounds/: README.md
assets/pets/: README.md
assets/placeholder/: PLACEHOLDERS.md
assets/sprites/characters/: README.md
assets/sprites/cosmetics/: README.md
assets/sprites/enemies/: README.md
assets/tilesets/: README.md
assets/ui/icons/: README.md
assets/ui/particles/: README.md
docs/: ASSET_BRIEF.md  DEPLOYMENT_STRATO.md  GAME_DESIGN.md  JUNE_1_PUBLIC_BETA_PLAN.md  PROJECT_ONBOARDING.md  RELEASES_GITHUB.md  SETUP.md  SHOP_POLICY.md  STRATO_LIVE_STATUS.md  lumorix-launcher-manifest.example.json
scripts/: bump-version.mjs  github-release-now.ps1
(+86 files in other folders)
