[package]
name = "lumorix-null-district"
version = "0.1.0-beta.1"
description = "Lumorix: Null District standalone desktop beta"
authors = ["Lumorix"]
license = "Proprietary"
repository = ""
edition = "2021"

[lib]
name = "lumorix_null_district_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
